--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <i class="fas fa-random"></i>
         </button>
       </div>
-      <div class="alphabet">
+      <!-- <div class="alphabet">
         <a href="#">A</a>
         <a href="#">B</a>
         <a href="#">C</a>
@@ -56,7 +56,7 @@
         <a href="#">X</a>
         <a href="#">Y</a>
         <a href="#">Z</a>
-      </div>
+      </div> -->
       <div id="result-heading"></div>
       <div id="meals" class="meals"></div>
       <div id="single-meal"></div>
